--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.3
+  flutter_bloc: ^7.0.0
+  google_fonts: ^2.1.0
+  font_awesome_flutter: ^9.0.0
+  flutter_riverpod: ^0.14.0+3
+  get: ^4.1.4
+  datetime_picker_formfield: ^2.0.0
+  equatable: ^2.0.2
 
 dev_dependencies:
   flutter_test:
