--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,18 +25,16 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.3
-  flutter_bloc: ^7.0.0
-  google_fonts: ^2.1.0
-  font_awesome_flutter: ^9.0.0
-  flutter_riverpod: ^0.14.0+3
-  get: ^4.1.4
   datetime_picker_formfield: ^2.0.0
   equatable: ^2.0.2
+  flutter_bloc: ^7.0.0
+  flutter_riverpod: ^0.14.0+3
+  font_awesome_flutter: ^9.0.0
+  get: ^4.1.4
+  google_fonts: ^2.1.0
+  http: ^0.13.3
+  lottie: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -44,25 +42,20 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
