--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.1.4
   datetime_picker_formfield: ^2.0.0
   equatable: ^2.0.2
+  carousel_slider: ^2.3.1
 
 dev_dependencies:
   flutter_test:
