--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cowin_vaccine_tracker">
    <application
-        android:label="cowin_vaccine_tracker"
+        android:label="Vaccine Finder"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
