--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,13 +18,14 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  carousel_slider: ^2.3.1
   cupertino_icons: ^1.0.2
   datetime_picker_formfield: ^2.0.0
   equatable: ^2.0.2
@@ -32,10 +33,9 @@ dependencies:
   flutter_riverpod: ^0.14.0+3
   font_awesome_flutter: ^9.0.0
   get: ^4.1.4
-  carousel_slider: ^2.3.1
   google_fonts: ^2.1.0
   http: ^0.13.3
-
+  lottie: ^1.0.1
 
 dev_dependencies:
   flutter_test:
