--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,16 @@ dependencies:
   datetime_picker_formfield: ^2.0.0
   equatable: ^2.0.2
   flutter_bloc: ^7.0.0
+  flutter_local_notifications: ^6.0.0
   flutter_riverpod: ^0.14.0+3
   font_awesome_flutter: ^9.0.0
   get: ^4.1.4
   google_fonts: ^2.1.0
   http: ^0.13.3
   lottie: ^1.0.1
+  provider: ^5.0.0
   url_launcher: ^6.0.6
+  workmanager: ^0.4.0
 
 dev_dependencies:
   flutter_test:
