--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^5.0.0
   url_launcher: ^6.0.6
   workmanager: ^0.4.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
