--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   carousel_slider: ^2.3.1
+  connectivity_plus: ^1.0.1
   cupertino_icons: ^1.0.2
   datetime_picker_formfield: ^2.0.0
   equatable: ^2.0.2
@@ -38,9 +39,9 @@ dependencies:
   http: ^0.13.3
   lottie: ^1.0.1
   provider: ^5.0.0
+  shared_preferences: ^2.0.6
   url_launcher: ^6.0.6
   workmanager: ^0.4.0
-  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
