--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.0.6
   url_launcher: ^6.0.6
   workmanager: ^0.4.0
+  number_display: ^3.0.0
 
 dev_dependencies:
   flutter_test:
