--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   number_display: ^3.0.0
   google_maps_flutter: ^2.0.1
   intl:
+  fl_chart: ^0.36.2
 
 dev_dependencies:
   flutter_test:
