--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.0.6
   workmanager: ^0.4.0
   number_display: ^3.0.0
+  neumorphic_container: ^0.0.1+2
   google_maps_flutter: ^2.0.1
   intl:
   fl_chart: ^0.36.2
