--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:label="Vaccine Finder"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="API_KEY"/>
+               android:value="AIzaSyDeLu_LWT5wWrZMXVRxLkWZj4R-wAGACRI"/>
         
         <activity
             android:name=".MainActivity"
